Feature/#292 remove "created_at" and "updated_at" from GET /jobs (#113)
