# backend/oas/user/schemas/jobs.yaml
@@ -235,14 +235,6 @@ jobs.JobDef:
       type: string
       format: date-time
       example: 2022-10-19T11:45:34+09:00
-    created_at:
-      type: string
-      format: date-time
-      example: 2022-10-19T11:45:34+09:00
-    updated_at:
-      type: string
-      format: date-time
-      example: 2022-10-19T11:45:34+09:00
   required:
     - job_id
     - name
@@ -279,8 +271,6 @@ jobs.JobDef:
       ready_at: 2022-10-19T11:45:34+09:00
       running_at: 2022-10-19T11:45:34+09:00
       ended_at: 2022-10-19T11:45:34+09:00
-      created_at: 2022-10-19T11:45:34+09:00
-      updated_at: 2022-10-19T11:45:34+09:00
 
 jobs.SubmitJobInfo:
   description: "All fields in this schema also exist in the `JobInfo` schema and have the same meaning as their counterparts in the `JobInfo` schema."
@@ -405,14 +395,6 @@ jobs.GetJobsResponse:
       type: string
       format: date-time
       example: 2022-10-19T11:45:34+09:00
-    created_at:
-      type: string
-      format: date-time
-      example: 2022-10-19T11:45:34+09:00
-    updated_at:
-      type: string
-      format: date-time
-      example: 2022-10-19T11:45:34+09:00
   required: []
   example:
       job_id: 7af020f6-2e38-4d70-8cf0-4349650ea08c
@@ -441,5 +423,3 @@ jobs.GetJobsResponse:
       ready_at: 2022-10-19T11:45:34+09:00
       running_at: 2022-10-19T11:45:34+09:00
       ended_at: 2022-10-19T11:45:34+09:00
-      created_at: 2022-10-19T11:45:34+09:00
-      updated_at: 2022-10-19T11:45:34+09:00
