# backend/oqtopus_cloud/provider/routers/jobs.py
@@ -372,8 +372,6 @@ def model_to_schema(
             ready_at=localize(model.ready_at),
             running_at=localize(model.running_at),
             ended_at=localize(model.ended_at),
-            created_at=pytz.utc.localize(model.created_at),
-            updated_at=localize(model.updated_at),
         )
     elif fields is not None:
         dict_schema: dict[str, Any] = {}
